# vs2019-cmake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt  install_dependencies.bat
cmake/: VersionInfo.in  VersionResource.rc  generate_product_version.cmake
lib/: dll_library.exp  qt_gui.exp
projects/di_main/: CMakeLists.txt
projects/di_main/include/di_main/: app.hpp
projects/di_main/source/: app.cpp
projects/dll_library/: CMakeLists.txt
projects/dll_library/include/dll_library/: greeting.hpp
projects/dll_library/source/: greeting.cpp
projects/external_library/: .gitignore  CMakeLists.txt
projects/external_library/include/external_library/: library.hpp
projects/external_library/lib/: library.lib
projects/huge_library/: CMakeLists.txt
projects/huge_library/include/huge_library/: greeting.hpp
projects/huge_library/source/: greeting.cpp
projects/huge_library2/: CMakeLists.txt
projects/huge_library2/include/huge_library2/: greeting.hpp
projects/huge_library2/source/: greeting.cpp
projects/main/: CMakeLists.txt
projects/main/source/: greeter.cpp  main.cpp  test.cpp
projects/module_a/include/module_a/: module.hpp
projects/module_a/source/: main.cpp  module.cpp
projects/module_b/: CMakeLists.txt
projects/module_b/include/module_b/: module.hpp
projects/module_b/source/: module.cpp
projects/qt_gui/: CMakeLists.txt
projects/qt_gui/include/qt_gui/: gui.hpp
projects/qt_gui/source/: gui.cpp
projects/qt_gui/source/ui/: main_window.cpp  main_window.hpp  main_window.ui
projects/static_external_library/lib/: libraryd.lib
projects/static_library/: CMakeLists.txt
projects/static_library/source/: greeting.cpp
tests/: CMakeLists.txt
tests/huge_library/: CMakeLists.txt  mock_foo.hpp  test_something.cpp
tests/simple/: CMakeLists.txt  test_numbers.cpp  test_something_else.cpp
tests/static_library/: CMakeLists.txt  mock_foo.hpp  test_something.cpp
